# bazel_pip_entrypoint

./: BUILD.bazel  README.md  WORKSPACE.bazel  python.bzl
docs/: BUILD.bazel  header.vm
private/: BUILD.bazel  script_maker.py
